# OpenAWS

./: CMakeLists.txt  README.md  sdkconfig
bom/: BOM.csv
cad/: AWSHousing.stp  AWSHousingCover.stp  AWSHousingPlug.stp  AnemometerBracket.dxf  AnemometerBracket.stp  Clamp.stp  RadiationShieldBottomPlate.stp  RainGaugeBucket.stp  ShaftCollar.stp  SolarPanelMount_Adj.stp  TemperatureHumidityPCBHousing.stp  TemperatureHumidityPCBInsert.stp  WindDirectionHousing.stp  WindDirectionMagnetHub.stp  WindDirectionShaft.stp  WindSpeedHousing.stp  WindSpeedMagnetHub.stp  WindSpeedShaft.stp
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/: common.h  modem.h  settings.h  station.h
main/src/: config.c  modem.c  station.c
main/ulp/: pulse_count.S
pcb/: BOM_Main PCB_Main PCB_2026-03-22.csv  PickAndPlace_Main PCB_2026-03-22.csv
